[+] Добавлена загрузка изображений. Реализована навигация. Реализован pinch-to-zoom

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Pix</string>
+    <string name="load_result_error_message">Ошибка загрузки изображений</string>
 </resources>
